Se actualiza informacion de la pagina de experiencia con la informacion actualizada.

--- a/pages/experience.html
+++ b/pages/experience.html
@@ -45,66 +45,38 @@ Version 1.2.34
 				<h2>Experiencia Profesional</h2>
 				<span class="byline">Siempre en la busqueda de nuevos desafios personales y profesionales</span>
 			</div>
-			<p>Aca listo mi experiencia profesional</p>
-		</div>
-				<div id="featured">
-			<div class="title">
-				<h2>Maecenas lectus sapien</h2>
-				<span class="byline">Integer sit amet aliquet pretium</span>
-			</div>
 			<ul class="style1">
 				<li class="first">
-					<p class="date"><a href="#">Jan<b>05</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<h2>Vicepresidente de Operaciones</h2>
+					<h3>DaVita S.A.S.</h3>
+					<h3>marzo de 2014 – enero de 2015</h3>
+					<p>En esta posición fui el responsable de la supervisión de la gestión global de operaciones en los centros de cuidado renal, incluyendo la gestión financiera, el cumplimiento de los presupuestos, la gestión integral de riesgos, el cumplimiento de la garantía de calidad, la gestión de la atención al paciente, el direccionamiento estrategico de las politicas generales y especificas de IT, garantizar el proceso de compras y gestion de la cadena de abastecimiento logistico por medios propios de la organizacion y la gestión estragica de las politicas de gestion de los compañeros de equipo. En mi posicion, además de monitorear el desempeño operativo general de la organizacion, era el responsable de identificar y desarrollar oportunidades de crecimiento estratégico, de la mano con el equipo directivo y la alta gerencia de la organizacion.</p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>03</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<h2>Director Ejecutivo</h2>
+					<h3>Tecnica Humana S.A.S.</h3>
+					<h3>agosto de 2012 – diciembre de 2014</h3>
+					<p>Emprendedor y socio fundador de Técnica Humana S.A.S. donde enfoco mi labor en la solución de las necesidades especificas de mis clientes, desarrollando procesos de consultoría estratégica para lograr la integración de procesos y plataformas tecnológicas e informáticas, al igual que las soluciones necesarias para la implementación exitosa de las soluciones definidas, con las cuales apoyar de forma efectiva la gestión organizacional y el buen gobierno corporativo. Soy el responsable de la consecución de negocios, gestión de alianzas estratégicas y planeación y desarrollo de las estrategias de crecimiento de la empresa.</p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>01</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<h2>Jefe de Operaciones y Seguridad</h2>
+					<h3>Brinks de Colombia Division Valores</h3>
+					<h3>abril de 2007 – julio de 2012</h3>
+					<p>Dirección de operaciones, planeación, gestión y control de sistemas de recaudo, control de los procesos de gestión de calidad, talento humano, responsable de los procesos de gestión integral del riesgo y gestión de inventarios críticos, manejo de presupuestos, cumplimiento de metas, gestión de relaciones con autoridades, asesoría en seguridad integral, servicio al cliente, responsable de la optimización de la operación para incrementar la productividad de áreas funcionales y productivas, instructor certificado para capacitación de nuevos talentos, instrucción de nuevas temáticas, buenas prácticas y multiplicador del know-how de la organización.</p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Dec<b>31</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<h2>Oficial de Infanteria de Marina</h2>
+					<h3>Armada Nacional</h3>
+					<h3>junio de 1998 – diciembre de 2006</h3>
+					<p>Gestión de inventarios, presupuesto y bienes del estado, atención y gestión de necesidades con el cliente externo; planeación estratégica, asesoría a los niveles superiores de la organización; planeación, gestión e implementación de operaciones, análisis y proyección de información para el uso de las actividades de la organización, creación de soluciones a la medida y generales para las necesidades de la estructura organizativa, control de recursos, planeación de la instrucción y capacitación de nuevos talentos, instrucción de nuevas temáticas y buenas practicas, líder de grupo durante la implementación del sistema de calidad total de la organización.</p>
+				</li>
+				<li>
+					<h2>Profesional Administrativo</h2>
+					<h3>Fundación Vital</h3>
+					<h3>julio de 2003 – julio de 2012</h3>
+					<p>Diseño de un sistema administrativo integrado, presentación y sustentación del gasto de los periodos frente a los Stakeholders para extensión del presupuesto y validación de la cooperación de la fundación con los gestores internacionales, gestor administrativo para la organización y capacitador en temas de administración y contabilidad, gestión e implementación tecnológica. Responsable del desarrollo de programas y proyectos de consultoría sobre procesos de tecnología, gestión organizacional y buen gobierno corporativo para agentes externos e internos.</p>
 				</li>
 			</ul>
-		</div>
-		<div>
-		Vicepresidente de Operaciones
-		DaVita S.A.S. Colombia
-		marzo de 2014 – enero de 2015 (11 meses)Bogota
-
-		En esta posición soy el responsable de la supervisión de la gestión global de operaciones en los centros de cuidado renal, incluyendo la gestión financiera, el cumplimiento de los presupuestos, la gestión integral de riesgos, el cumplimiento de la garantía de calidad, la gestión de la atención al paciente, el direccionamiento estrategico de las politicas generales y especificas de IT, garantizar el proceso de compras y gestion de la cadena de abastecimiento logistico por medios propios de la organizacion y la gestión estragica de las politicas de gestion de los compañeros de equipo. En mi posicion actual, además de monitorear el desempeño operativo general de la organizacion, soy el responsable de identificar y desarrollar oportunidades de crecimiento estratégico, de la mano con el equipo directivo y la alta gerencia de la organizacion.
-
-		Dentro de mis funciones especificas están:
-
-		Desarrollar y gestionar las operaciones clínicas y presupuestos de capital, revisar, autorizar y supervisar los gastos, conciliando los diferentes movimientos financieros con los informes de ingresos, implementar las correcciones necesarias a las desviaciones presupuéstales, asegurando el principio de oportunidad sobre las acciones correctivas, manteniendo como prioridad los costos, la seguridad y los pacientes con respecto a las unidades, los equipos y los sistemas, supervisar el diseño y la construcción de nuevas unidades y la ampliación / renovación de unidades existentes, proporcionar capacitación sobre políticas y procedimientos para todas las áreas, para garantizar el cumplimiento de los estándares financieros de casa matriz, asegurándose que cada unidad cumple con todas las normas internas y externas de conducta, así como todos los requisitos legales, siempre vigilante del cumplimiento de las políticas y procedimientos de DaVita en conformidad con las regulaciones publicas para la atención y los servicios del paciente.
-		Director Ejecutivo
-		Tecnica Humana S.A.S.
-		agosto de 2012 – diciembre de 2014 (2 años 5 meses)Ginebra, Valle del Cauca
-
-		Emprendedor y socio fundador de Técnica Humana S.A.S. donde enfoco mi labor en la solución de las necesidades especificas de mis clientes, desarrollando procesos de consultoría estratégica para lograr la integración de procesos y plataformas tecnológicas e informáticas, al igual que las soluciones necesarias para la implementación exitosa de las soluciones definidas, con las cuales apoyar de forma efectiva la gestión organizacional y el buen gobierno corporativo. Soy el responsable de la consecución de negocios, gestión de alianzas estratégicas y planeación y desarrollo de las estrategias de crecimiento de la empresa.
-		Jefe de Operaciones y Seguridad
-		Brinks
-		abril de 2007 – julio de 2012 (5 años 4 meses)Pasto, Colombia
-
-		Dirección de operaciones, planeación, gestión y control de sistemas de recaudo, control de los procesos de gestión de calidad, talento humano, responsable de los procesos de gestión integral del riesgo y gestión de inventarios críticos, manejo de presupuestos, cumplimiento de metas, gestión de relaciones con autoridades, asesoría en seguridad integral, servicio al cliente, responsable de la optimización de la operación para incrementar la productividad de áreas funcionales y productivas, instructor certificado para capacitación de nuevos talentos, instrucción de nuevas temáticas, buenas prácticas y multiplicador del know-how de la organización.
-		Profesional Administrativo
-		Fundación Vital
-		julio de 2003 – julio de 2012 (9 años 1 mes)Ginebra, Valle del Cauca, Colombia
-
-		Diseño de un sistema administrativo integrado, presentación y sustentación del gasto de los periodos frente a los Stakeholders para extensión del presupuesto y validación de la cooperación de la fundación con los gestores internacionales, gestor administrativo para la organización y capacitador en temas de administración y contabilidad, gestión e implementación tecnológica. Responsable del desarrollo de programas y proyectos de consultoría sobre procesos de tecnología, gestión organizacional y buen gobierno corporativo para agentes externos e internos.
-		Oficial de Infanteria de Marina
-		Armada Nacional
-		junio de 1998 – diciembre de 2006 (8 años 7 meses)Armada Nacional
-
-		Gestión de inventarios, presupuesto y bienes del estado, atención y gestión de necesidades con el cliente externo; planeación estratégica, asesoría a los niveles superiores de la organización; planeación, gestión e implementación de operaciones, análisis y proyección de información para el uso de las actividades de la organización, creación de soluciones a la medida y generales para las necesidades de la estructura organizativa, control de recursos, planeación de la instrucción y capacitación de nuevos talentos, instrucción de nuevas temáticas y buenas practicas, líder de grupo durante la implementación del sistema de calidad total de la organización.
 		</div>
 		<div id="social_network">
 			<ul>
