--- a/pages/projects.html
+++ b/pages/projects.html
@@ -65,65 +65,29 @@ Version 1.2.34
 				<li>
 					<p class="date"><b>1998</b></p>
 					<h2>Direccionamiento estratégico para el mejoramiento de la administración del talento humano en la Alcaldía del Municipio de Ginebra, Valle del Cauca con base en las Tecnologías de la Información y las Comunicaciones</h2>
-					<p>Joven entregado a la sociedad como parte fundamental de su desarrollo presente y futuro.</p>
+					<p>El estudio tuvo como propósito fundamental la evaluación de la administración del Talento Humano (GTH), al interior de la Alcaldía de Ginebra, Valle del Cauca, partiendo de un diagnóstico dirigido al cliente interno o funcionario, en conjunto con una evaluación de los diferentes aspectos de Gestión del Talento Humano en las diferentes áreas funcionales, buscando determinar el nivel de satisfacción en el cargo desempeñado, los conocimientos básicos que posee cada uno los integrantes de la organización sobre tecnologías de la información y las comunicaciones, los recursos tecnológicos que posee la organización, el aprovechamiento de los recursos tecnológicos a disposición de los funcionarios y las características organizativas de la Alcaldía al igual que la forma en que todos estos aspectos se relacionan y afectan el desempeño de los funcionarios y el de la organización en general. Como parte de los resultados, se detectaron las fortalezas, debilidades, oportunidades y amenazas en el aspecto investigado, se creo un programa de trabajo para atender todas las necesidades detectadas y se ejecuto el programa, previamente aceptado por la organización.</p>
 				</li>
 				<li>
 					<p class="date"><b>1998</b></p>
-					<h2>Bachiller Academico</h2>
-					<p>Joven entregado a la sociedad como parte fundamental de su desarrollo presente y futuro.</p>
+					<h2>Desarrollo de una solucion informatica para integrar equipos de monitoreo medico</h2>
+					<p>Se requirió por parte de nuestro cliente, una aplicación informática que permitiese la integración y monitoreo remoto de uno equipos médicos de atención para pacientes renales, como apoyo a los programas de telemedicina y las estrategias organizacionales, además permitiendo la integración de la labor con otras herramientas informáticas de nuestro cliente. Como líder del proyecto soy responsable de liderar los equipos que de desarrollo de software, realizar los levantamientos de necesidades por parte de nuestro cliente y del fabricante de los equipos, así como de transmitir entre las partes inquietudes y necesidades, administrar el proyecto, liderar la negociación comercial y apoyar al equipo, solventando necesidades en cualquiera de los campos.</p>
 				</li>
 				<li>
 					<p class="date"><b>1998</b></p>
-					<h2>Bachiller Academico</h2>
-					<p>Joven entregado a la sociedad como parte fundamental de su desarrollo presente y futuro.</p>
+					<h2>Diseño de una metodologia para la gestion integral del riesgo operacional</h2>
+					<p>Hice parte del equipo de desarrollo de la metodología, apoyando el proceso de conceptualización y formalización de la gestión del riesgo integral y aportando conocimientos específicos en el manejo de recursos tecnológicos. Diseñe algunos de los prototipos funcionales de una herramienta tecnológica para apoyar el proceso de análisis de riesgo, acorde con el modelo de negocios, apoye el modelado de los requerimientos técnicos y apoye el proceso de toma de decisiones a nivel gerencial.</p>
 				</li>
 				<li>
 					<p class="date"><b>1998</b></p>
-					<h2>Bachiller Academico</h2>
-					<p>Joven entregado a la sociedad como parte fundamental de su desarrollo presente y futuro.</p>
+					<h2>Diseñe y despliegue de unas herramientas informaticas nuevas y el proceso de capacitacion en el uso de las herramientas en el territorio nacional</h2>
+					<p>Un cliente del sector de servicios de IT para el sector salud, requirió la planeación estratégica y ejecución eficiente de un proyecto de largo alcance, bajo la figura de marca blanca, para el despliegue, implementación y posterior capacitación de unos usuarios en el uso de unas herramientas informáticas, en diversas ubicaciones del territorio colombiano, en un lapso no mayor a 60 días, con un adecuado control de costos, cobertura del 100%, aseguramiento de la calidad en la ejecución y mejoramiento del presupuesto estipulado; todo dentro de un marco de aseguramiento de riesgo y adecuado manejo de la confidencialidad, por tratarse de un proyecto ejecutado para un organismo de alto nivel del sector gobierno.</p>
 				</li>
 				<li>
 					<p class="date"><b>1998</b></p>
-					<h2>Bachiller Academico</h2>
-					<p>Joven entregado a la sociedad como parte fundamental de su desarrollo presente y futuro.</p>
+					<h2>Operacion continuada de unos centros de gestion de informacion</h2>
+					<p>Un cliente del sector de servicios de IT para la salud, requirió la planeación estratégica y ejecución eficiente de un proceso, bajo la figura de marca blanca, para la gestión y operación de unos centros de gestión de información, acopio y oferta de infraestructura, garantes de un proceso de apoyo a sus clientes y usuarios, locales y remotos, con capacidad de orientación, capacitación, conectividad y solvencia, distribuidos de manera eficiente en el territorio nacional, en unas condiciones de máximo aprovechamiento, elevada productividad y ROI efectivo.</p>
 				</li>
 			</ul>
-			<div>
-
-				
-				octubre de 2008 – noviembre de 2010
-
-				El estudio tuvo como propósito fundamental la evaluación de la administración del Talento Humano (GTH), al interior de la Alcaldía de Ginebra, Valle del Cauca, partiendo de un diagnóstico dirigido al cliente interno o funcionario, en conjunto con una evaluación de los diferentes aspectos de Gestión del Talento Humano en las diferentes áreas funcionales, buscando determinar el nivel de satisfacción en el cargo desempeñado, los conocimientos básicos que posee cada uno los integrantes de la organización sobre tecnologías de la información y las comunicaciones, los recursos tecnológicos que posee la organización, el aprovechamiento de los recursos tecnológicos a disposición de los funcionarios y las características organizativas de la Alcaldía al igual que la forma en que todos estos aspectos se relacionan y afectan el desempeño de los funcionarios y el de la organización en general. Como parte de los resultados, se detectaron las fortalezas, debilidades, oportunidades y amenazas en el aspecto investigado, se creo un programa de trabajo para atender todas las necesidades detectadas y se ejecuto el programa, previamente aceptado por la organización.
-				Desarrollo de una solucion informatica para integrar equipos de monitoreo medico
-				julio de 2013 – mayo de 2014
-
-				Se requirió por parte de nuestro cliente, una aplicación informática que permitiese la integración y monitoreo remoto de uno equipos médicos de atención para pacientes renales, como apoyo a los programas de telemedicina y las estrategias organizacionales, además permitiendo la integración de la labor con otras herramientas informáticas de nuestro cliente. Como líder del proyecto soy responsable de liderar los equipos que de desarrollo de software, realizar los levantamientos de necesidades por parte de nuestro cliente y del fabricante de los equipos, así como de transmitir entre las partes inquietudes y necesidades, administrar el proyecto, liderar la negociación comercial y apoyar al equipo, solventando necesidades en cualquiera de los campos.
-
-				Miembros de equipo:
-
-				        Sebastian Reyes Espinosa,
-				        Pedro Andres Aldana Romo,
-				        Jorge Garcia
-
-				Diseño de una metodologia para la gestion integral del riesgo operacional
-				marzo de 2009 – enero de 2010
-
-				Hice parte del equipo de desarrollo de la metodología, apoyando el proceso de conceptualización y formalización de la gestión del riesgo integral y aportando conocimientos específicos en el manejo de recursos tecnológicos. Diseñe algunos de los prototipos funcionales de una herramienta tecnológica para apoyar el proceso de análisis de riesgo, acorde con el modelo de negocios, apoye el modelado de los requerimientos técnicos y apoye el proceso de toma de decisiones a nivel gerencial.
-
-				Miembros de equipo:
-
-				        Sebastian Reyes Espinosa,
-				        Alfonso Borrero
-
-				Diseñe y despliegue de unas herramientas informaticas nuevas y el proceso de capacitacion en el uso de las herramientas en el territorio nacional
-				noviembre de 2012 – marzo de 2013
-
-				Un cliente del sector de servicios de IT para el sector salud, requirió la planeación estratégica y ejecución eficiente de un proyecto de largo alcance, bajo la figura de marca blanca, para el despliegue, implementación y posterior capacitación de unos usuarios en el uso de unas herramientas informáticas, en diversas ubicaciones del territorio colombiano, en un lapso no mayor a 60 días, con un adecuado control de costos, cobertura del 100%, aseguramiento de la calidad en la ejecución y mejoramiento del presupuesto estipulado; todo dentro de un marco de aseguramiento de riesgo y adecuado manejo de la confidencialidad, por tratarse de un proyecto ejecutado para un organismo de alto nivel del sector gobierno.
-				Operacion continuada de unos centros de gestion de informacion
-				noviembre de 2012 – marzo de 2013
-
-				Un cliente del sector de servicios de IT para la salud, requirió la planeación estratégica y ejecución eficiente de un proceso, bajo la figura de marca blanca, para la gestión y operación de unos centros de gestión de información, acopio y oferta de infraestructura, garantes de un proceso de apoyo a sus clientes y usuarios, locales y remotos, con capacidad de orientación, capacitación, conectividad y solvencia, distribuidos de manera eficiente en el territorio nacional, en unas condiciones de máximo aprovechamiento, elevada productividad y ROI efectivo.
-			</div>
 		<div id="social_network">
 			<ul>
 				<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" target="_blank" title=""><img src="../icons/google110.png" width='48' height='48'/></a></li>
