Se agrega informacion a la pagina de proyectos

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -42,9 +42,9 @@ Version 1.2.34
 	<div id="main">
 		<div id="welcome">
 			<div class="title">
-				<h2>Proyectos en los que he participado</h2>
+				<h2>Proyectos en los que he participado*</h2>
 				<span class="byline">Siempre en la busqueda de nuevos desafios personales y profesionales</span>
-				<h3>Todos estos proyectos fueron realizados despues de 2010</h3>
+
 			</div>
 			<ul class="style1">
 				<li class="first">
@@ -81,6 +81,7 @@ Version 1.2.34
 					<p>Un cliente del sector de servicios de IT para la salud, requirió la planeación estratégica y ejecución eficiente de un proceso, bajo la figura de marca blanca, para la gestión y operación de unos centros de gestión de información, acopio y oferta de infraestructura, garantes de un proceso de apoyo a sus clientes y usuarios, locales y remotos, con capacidad de orientación, capacitación, conectividad y solvencia, distribuidos de manera eficiente en el territorio nacional, en unas condiciones de máximo aprovechamiento, elevada productividad y ROI efectivo.</p>
 				</li>
 			</ul>
+			<h3>* Todos estos proyectos fueron realizados desde el año 2010 en adelante.</h3>
 		<div id="social_network">
 			<ul>
 				<li><a alt="Google+" href="https://plus.google.com/+SebastianReyesEspinosa/about" target="_blank" title=""><img src="../icons/google110.png" width='48' height='48'/></a></li>
